--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 img {
@@ -120,6 +120,7 @@ img {
 }
 
 .header-link {
+    position: relative;
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
@@ -128,13 +129,28 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--header-link-color);    
+    color: var(--header-link-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);    
 }
 
 .header-link:hover,
 .header-link:focus{
     color: var(--hover-focus-color);
 }
+
+.header-link.active::after {
+    content:"" ;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #404BBF;
+    border-radius: 2px;
+
+
+}
+
 .header-item:not(:last-child) {
     margin-right: 40px;
 }
@@ -211,6 +227,10 @@ margin-right: 40px;
         color: #FFFFFF;
 }
 
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: #404BBF;
+}
           /*------------feature---особливість--------------> */
 
 .feature {
@@ -634,4 +654,72 @@ color: var(--p-text-color);
 .footer-link:hover,
 .footer-link:focus{
     background-color: #31D0AA;
+}
+.backdrop {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: opacity 0.3s linear, visibility 0.3s linear;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 0.3s linear;
+
+    width: 408px;
+    height: 576px;
+    background: #FCFCFC;
+    box-shadow: 
+    0px 1px 1px 
+    rgba(0, 0, 0, 0.14), 0px 1px 3px 
+    rgba(0, 0, 0, 0.12), 0px 2px 1px 
+    rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.modal-btn-close {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+
+.modal-svg{
+    display: flex;
+    width: 8px;
+    height: 8px;
+    fill: #2E2F42;
+}
+
+.modal-btn-close:hover,
+.modal-btn-close:focus {
+    background-color: #404BBF;
+
+    /* fill: #FFFFFF; */
+}
+
+.modal-btn-close:hover .modal-svg {
+    fill: #ffffff;
+}
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0);
 }
