--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ img {
     height: 4px;
     background-color: #404BBF;
     border-radius: 2px;
-
+    margin-bottom: -1px;
 
 }
 
@@ -174,6 +174,7 @@ margin-right: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--header-address-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  
 .address-mail:hover,
@@ -187,9 +188,9 @@ margin-right: 40px;
 
 /* ---------------- section hero -------------- */
 .hero {
-    /* background-color: var(--hero-background-color); */
-
     padding: 188px 0;
+    border-radius: 0;
+    margin: 0;
 
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -215,6 +216,8 @@ margin-right: 40px;
         display: flex;
         padding: 16px 32px;
         margin: 0 auto ;
+        border: 0;
+        height: 56px;
 
         background: #4D5AE5;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -225,6 +228,7 @@ margin-right: 40px;
         line-height: 1.5;
         letter-spacing: 0.04em;        
         color: #FFFFFF;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -415,6 +419,7 @@ margin-bottom: 72px;
 
     border-radius: 50px; 
     background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-link:hover,
@@ -458,7 +463,8 @@ margin-bottom: 72px;
     
     color: #8E8F99; 
     border: 1px solid #8E8F99;
-    border-radius: 4px;   
+    border-radius: 4px;  
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-link:hover,
@@ -491,6 +497,26 @@ margin-bottom: 72px;
     cursor: pointer;
 }
 
+
+
+.filter-btn{
+    padding: 12px 24px;
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
+    height: 48px;
+
+    background-color: #F4F4FD;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #4D5AE5;
+    transition-property: background-color, color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .filter-btn:hover,
 .filter-btn:focus {
     background-color: var(--hover-focus-color);
@@ -500,20 +526,7 @@ margin-bottom: 72px;
     rgba(0, 0, 0, 0.08), 0px 2px 2px 
     rgba(0, 0, 0, 0.12);
     border-radius: 4px;
-}
-
-.filter-btn{
-    padding: 12px 24px;
-    border: 1px solid #E7E9FC;
-    border-radius: 4px;
-
-    background-color: #F4F4FD;
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #4D5AE5;
+    border: 0;
 }
 
 .filter-item:not(:last-child) {
@@ -526,8 +539,34 @@ margin-bottom: 72px;
 }
 
 .portfolio-item{
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
     margin-right: 24px;
     margin-bottom: 48px;
+}
+
+.portfolio-img{
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    transform: translateY(100%);
+    transition: transform 250ms ease;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;    
+    letter-spacing: 0.02em;     
+        color: #F4F4FD;
+        background-color: #4D5AE5;
 }
 
 .portfolio-item:nth-child(3n){
@@ -538,8 +577,13 @@ margin-bottom: 72px;
     margin-bottom: 0;
 }
 
+.portfolio-item:hover .portfolio-overlay,
+.portfolio-item:focus .portfolio-overlay {
+    transform: translateY(0);
+}
 .portfolio-item:hover,
-.portfolio-item:focus{
+.portfolio-item:focus {
+
     box-shadow: 0px 1px 6px 
     rgba(46, 47, 66, 0.08), 0px 1px 1px 
     rgba(46, 47, 66, 0.16), 0px 2px 1px 
@@ -649,6 +693,7 @@ color: var(--p-text-color);
     height: 100%;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
@@ -693,6 +738,9 @@ color: var(--p-text-color);
     border-radius: 50%;
     background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4,0,0.2,1);
 }
 
 
@@ -701,6 +749,9 @@ color: var(--p-text-color);
     width: 8px;
     height: 8px;
     fill: #2E2F42;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4,0,0.2,1);
 }
 
 .modal-btn-close:hover,
