--- a/css/styles.css
+++ b/css/styles.css
@@ -539,11 +539,21 @@ margin-bottom: 72px;
 }
 
 .portfolio-item{
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    /* transition-duration: 250ms; */
+    /* transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 
     margin-right: 24px;
     margin-bottom: 48px;
+}
+
+
+.portfolio-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .portfolio-img{
@@ -577,13 +587,13 @@ margin-bottom: 72px;
     margin-bottom: 0;
 }
 
-.portfolio-item:hover .portfolio-overlay,
-.portfolio-item:focus .portfolio-overlay {
+.portfolio-link:focus .portfolio-overlay,
+.portfolio-link:hover .portfolio-overlay {
     transform: translateY(0);
 }
-.portfolio-item:hover,
-.portfolio-item:focus {
 
+.portfolio-link:hover,
+.portfolio-link:focus {
     box-shadow: 0px 1px 6px 
     rgba(46, 47, 66, 0.08), 0px 1px 1px 
     rgba(46, 47, 66, 0.16), 0px 2px 1px 
