--- a/css/styles.css
+++ b/css/styles.css
@@ -567,10 +567,12 @@ margin-bottom: 72px;
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: auto;
 
     transform: translateY(100%);
     transition: transform 250ms ease;
 
+    padding: 40px 32px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;    
